# meclipboard

./: CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json
dev-log/: 2026-05-30.md
docs/: design-specs.md  execution-steps.md  requirements.md  tech-specs.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/clipboard/: mod.rs  models.rs  monitor.rs
src-tauri/src/storage/: database.rs  images.rs
src/js/: history.js  main.js  settings.js
