[package]
name = "meclipboard"
version = "0.1.0"
description = "MeClipboard - Windows clipboard history manager"
authors = ["SYZ"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "meclipboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-clipboard-manager = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
image = "0.25"
sha2 = "0.10"
chrono = "0.4"
base64 = "0.22"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
